# win-auto

./: .editorconfig  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EXTENSION_CONTRACT.md  LICENSE  NOTEPAD_AUTOMATION_PLAN.md  NOTEPAD_AUTOMATION_PROBLEM.md  README.md  REVIEW.md  eslint.config.js  package-lock.json  package.json  test-native.js  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: ROADMAP.md  after-after-fix.md  after-fix-2026-06.md  roadmap.md
examples/: notepad.ts
native/win-auto-native/: .npmignore  Cargo.toml  DOCUMENTATION.md  README.md  build.rs  index.d.ts  index.js  package.json
native/win-auto-native/src/: config.rs  dialogs.rs  discovery.rs  error.rs  event_watcher.rs  hardware_input.rs  highlight.rs  interaction.rs  legacy_messages.rs  lib.rs  ocr.rs  ole_drag.rs  patterns.rs  process_control.rs  screenshot.rs  template_match.rs  trace.rs  utils.rs
scripts/: bump-versions.js  debug-notepad-discovery.js  publish-all.js
tests/: tsconfig.json
tests/.tmp/demo/: package.json  tsconfig.json  win-auto.config.ts
tests/.tmp/demo/tests/: sample.spec.ts
tests/benchmark/: benchmark.test.ts
tests/compat/: compat-matrix.test.ts
tests/e2e/: calculator-real.test.ts  native-ping.test.ts  notepad-real.test.ts
tests/stress/: stress.test.ts
